# OpenZenith

./: .gitignore  .markdownlint.json  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  lint.yml
src/: main.py
src/core/: config.py  flight_data.py  mock_provider.py  tracker.py
tests/core/: test_config.py  test_flight_data.py  test_tracker.py
