[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openzenith"
version = "0.1.0"
description = "Real-time sky awareness: aircraft, satellites, and weather overhead."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

authors = [
  { name = "Michael G. Perdue", email = "michael@mperdue.dev" }
]

dependencies = [
  "requests>=2.31",
  "PySide6>=6.5",
  "matplotlib>=3.7",
  "Pillow>=9.5",
  "numpy>=1.24",
  "python-dotenv>=1.0",
  "aiohttp>=3.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=23.3",
  "isort>=5.12",
  "mypy>=1.5",
  "flake8>=6.0",
  "coverage>=7.3",
  "pre-commit>=3.2",
]

[project.urls]
"Homepage" = "https://github.com/mgperdue/OpenZenith"
"Documentation" = "https://github.com/mgperdue/OpenZenith/docs"
"Source" = "https://github.com/mgperdue/OpenZenith"
"Issue Tracker" = "https://github.com/mgperdue/OpenZenith/issues"
