[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openzenith"
version = "0.1.0"
description = "Real-time sky awareness: aircraft, satellites, and weather overhead."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

authors = [
  { name = "Michael G. Perdue", email = "michael@mperdue.dev" }
]

dependencies = [
  "requests>=2.31",
  "PySide6>=6.5",
  "matplotlib>=3.7",
  "Pillow>=9.5",
  "numpy>=1.24",
  "python-dotenv>=1.0",
  "aiohttp>=3.8"
]


[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.0.0",
  "black>=23.3.0",
  "flake8>=6.1.0",
  "mypy>=1.3.0",
  "isort>=5.12.0",
  "coverage>=7.2.0",
  "pre-commit>=3.3.0"
]


[project.urls]
"Homepage" = "https://github.com/mgperdue/OpenZenith"
"Documentation" = "https://github.com/mgperdue/OpenZenith/docs"
"Source" = "https://github.com/mgperdue/OpenZenith"
"Issue Tracker" = "https://github.com/mgperdue/OpenZenith/issues"
